--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,7 @@ a {
   width: 100%;
   height: 100%;
   position: relative;
+  border-radius: 6px;
 }
 
 .class-content .line-vertical .vertical-img .vertical-hover {
@@ -661,4 +662,17 @@ a {
     padding-left:3.5em;
     font-size: 16px;
     font-family: "幼圆";
+}
+.mag_number1 {
+  position: absolute;
+  width:20px ;
+  height: 20px;
+  border-radius: 10px;
+  background-color: #FA7787;
+  color: white;
+  top: 10px;
+  right: 25px;
+  line-height: 20px;
+  font-size: 10px;
+  text-align: center;
 }
