--- a/css/LOgin.css
+++ b/css/LOgin.css
@@ -9,8 +9,16 @@ body li{
 	right: 330px;
 	display: none;
 }	
+
 .Login .Login_small {
   height: 320px;
+  border: 1px solid #6c4274;
+  border-radius: 10px;
+  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+  
+}
+.Login .Login_small_tow {
+  height: 420px;
   border: 1px solid #6c4274;
   border-radius: 10px;
   box-shadow: 0 3px 9px rgba(0,0,0,.5);
@@ -77,4 +85,17 @@ body li{
     border: 1px solid red !important;
     background-color: red !important;
     color: #363636 !important;		
+}
+.obtaincode{
+    line-height: 46px;
+    width: 114px;
+    height: 44px;
+    font-size: 14px;
+    text-align: center;
+    float: right;
+    margin: 12px 20px 0 0;
+    background-color: #9188d9;
+    box-shadow: 0px 3px 0px 0px #4c429b;
+    color: #FFFFFF;
+    cursor: pointer;
 }
