--- a/css/index.css
+++ b/css/index.css
@@ -187,9 +187,9 @@
 		text-align: center;
 		width: 125px;
 		overflow: hidden;
-	    display: -webkit-box;
-	    -webkit-line-clamp: 2;
-	    -webkit-box-orient: vertical;
+	  display: -webkit-box;
+	  -webkit-line-clamp: 2;
+	  -webkit-box-orient: vertical;
 	    
 	    
 	}
@@ -256,8 +256,8 @@
 	}
 	 .index .sidebar .sidebar_content a:hover{
 	   transition: all 0.2s ease;
-        -webkit-transition: all 0.2s ease;
-        color: #0E9AC8;
+     -webkit-transition: all 0.2s ease;
+     color: #0E9AC8;
 	 }
 	.index .sidebar .sidebar_content .sidebar_con {
 		width: 301px;
@@ -266,10 +266,20 @@
 		position: relative;
 		margin-bottom: 20px;
 	}
+	.index .sidebar .sidebar_content .sidebar_con .img_box{
+	  width: 20px;
+	  height: 16px;
+	  border-radius: 0  0 6px 0 ;
+	  background-color: #ffdc00;
+	  display:  inline-block;
+	  position: absolute;
+	  left: 0px;
+	  top: 0px;
+	}
 	.index .sidebar .sidebar_content .sidebar_con .sidebar_img {
 		position: absolute;
 		left: 0px;
-		bottom: -10px;
+		top: 0px;
 	}
 	.index .sidebar .sidebar_content .sidebar_con ul{ 
 		width: 208px;
@@ -313,7 +323,7 @@
 		margin-top:10px ;
 	}
 	.index .sidebar .sidebar_content .sidebar_cont ul{
-		width: 278px;
+		  width: 278px;
 	    height: 25px;
 	    text-align: center;
 	    margin-top: 10px ;
@@ -929,7 +939,7 @@
 		bottom: 20px;
 		left: 15px;
 	}
-	.index  .Small .Small_ul li {
+	.index .Small .Small_ul li {
 	   	height:14px;
 		  line-height: 14px;
 		  width: 100px;
@@ -937,6 +947,7 @@
 	    overflow: hidden;
 	    text-overflow: ellipsis;
 	    margin-top: 10px;
+	    font-size: 12px;
 	}
 	.imgHeadPortrait {
 	  height: 46px;
