--- a/css/main.css
+++ b/css/main.css
@@ -419,6 +419,7 @@ a {
   top: 80px;
   padding-right: 20px;
   left: 25px;
+  font-size: 12px;
 }
 
 .class-content .line-vertical .vertical-img .vertical-click-size {
@@ -426,6 +427,8 @@ a {
   top: 110px;
   padding-right: 20px;
   left: 25px;
+  font-size: 12px;
+  
 }
 
 .class-content .line-vertical .vertical-img .vertical-collection-size {
@@ -433,6 +436,7 @@ a {
   top: 140px;
   padding-right: 20px;
   left: 25px;
+  font-size: 12px;
 }
 
 .class-content .line-vertical .vertical-img .vertical-a-reward {
@@ -440,6 +444,7 @@ a {
   top: 170px;
   padding-right: 20px;
   left: 25px;
+  font-size: 12px;
 }
 
 .class-content .line-vertical .vertical-title {
