更新 加指纹

--- a/view/ranking.html
+++ b/view/ranking.html
@@ -91,6 +91,6 @@
   </div>
 	<myfooter></myfooter>
 	</body>
-<script src="../js/main/ranking.js"></script>
+<script src="../js/main/ranking_fd6b7808bd.js"></script>
 
 </html>
