--- a/view/read_book.html
+++ b/view/read_book.html
@@ -151,5 +151,5 @@
 	<div class="fa-expand"></div>
 
 	</body>
-<script src="../js/main/read_book.js"></script>
+<script src="../js/main/read_book_9adb966ca2.js"></script>
 </html>
