--- a/view/welfare.html
+++ b/view/welfare.html
@@ -40,5 +40,5 @@
 	</tr>
 </table>
 </body>
-<script src="../js/main/welfare.js"></script>
+<script src="../js/main/welfare_0a2b41a5b0.js"></script>
 </html>
