--- a/view/catalog.html
+++ b/view/catalog.html
@@ -125,10 +125,10 @@
 		<li class="user_head"><a href="javascript:;">
 		  <img src="../img/sss8.jpg" @load="szxj.loadImg(loginImg ? path.rootPath + loginImg: '', $event)"/></a></li>
 
-		<li class="user_msg" >
+		<li class="user_msg" v-if="loginFlag" >
 		  <editor :id="'editor_'" v-ref:editor></editor>
 		</li>
-		<!--<li class="user_msgTow" v-else ><a :href="path.TemprootPath + /view/login.html">登录</a>后才可以进行操作 </li>-->
+		<li class="user_msgTow" v-else ><a :href="path.TemprootPath + '/view/login.html'">登录</a>后才可以进行操作 </li>
 
 		<li class="MessageBtn" @click="saveComment"><span>发表评论</span></li>
 	</ul>
@@ -426,7 +426,7 @@
 <link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog.js"></script>
+<script src="../js/main/catalog_e5553ebfbe.js"></script>
 </body>
 </html>
 
