--- a/view/class.html
+++ b/view/class.html
@@ -117,6 +117,6 @@
     </div>
     
   <myfooter></myfooter>
-  <script src="../js/main/class.js"></script>		
+  <script src="../js/main/class_fccece1b84.js"></script>		
 </body>
 </html>
