--- a/view/user_info.html
+++ b/view/user_info.html
@@ -84,5 +84,5 @@
 <script type="text/javascript" src="../lib/wangEditor.min.js" ></script>
 <link rel="stylesheet" href="../css/cropper.min.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
-<script src="../js/main/user_info.js"></script>
+<script src="../js/main/user_info_bfabaa0791.js"></script>
 </html>
