--- a/css/user_info.css
+++ b/css/user_info.css
@@ -440,7 +440,10 @@
   font-size: 15px;
   cursor: pointer;
 }
-.catalogue .content_bookTitle:hover{
+.catalogue .content_bookTitle a:visited{
+  color: black;
+}
+.catalogue .content_bookTitle a:hover{
   color: #009926;
   transition: all 0.2s;
 }
@@ -1284,7 +1287,7 @@
   left: 210px;
 }
 .up .up-word {
-	margin: 0 0px 0 25px;
+	margin: 0 0px 0 90px;
 	font-size: 18px;
 	cursor: pointer;
 	float: right;
@@ -1295,7 +1298,7 @@
 }
 
 .centreAI .font {
-	margin: 20px 20px 0 5px;
+	margin: 20px 65px 0 5px;
 }
 
 .centreAI .imgAI1 {
@@ -1514,9 +1517,11 @@
   margin-top: 15px;
   cursor: pointer;
 }
-.attention_AI_words .attention_AI_detailed:hover {
-  color:#92C202 ;
-  
+.attention_AI_words .attention_AI_detailed a:visited {
+  color:black;
+}
+.attention_AI_words .attention_AI_detailed a:hover {
+  color:#92C202; 
 } 
 .attention_AI_name {
   text-overflow: ellipsis;
