--- a/view/Password_rec.html
+++ b/view/Password_rec.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>QC文学网-密码找回页</title>
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter.css" />
-	  <link rel="stylesheet" href="../css/LOgin.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+    <link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter_69d072ec5f.css" />
+	  <link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
 	<body id="app">
 	  <myheader></myheader>
