--- a/view/catalog.html
+++ b/view/catalog.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
-		<link rel="stylesheet" href="../css/main.css" />
-		<link rel="stylesheet" href="../css/catalog.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter.css" />
-		<link rel="stylesheet" href="../css/LOgin.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
+		<link rel="stylesheet" href="../css/catalog_f93384b015.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter_69d072ec5f.css" />
+		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
 	<body id="mask" id="app"
 	  v-show="bodyFlag" style="display: none;"
@@ -44,7 +44,7 @@
 							<li @click="setCollect()" v-if="!collect" ><span><img src="../img/sss4.png"/ class="text_Collection"><p>收藏</p><i style="font-style: normal;">{{Collection}}</i></li>
 							<li @click="setCollect()" v-else ><span><img src="../img/sss4.png"/ class="text_Collection"><p>已收藏</p><i style="font-style: normal;">{{Collection}}</i></li>
 							<li style="display: none;" <!--v-on:click="rewardFn"--><span><img src="../img/sss3.png"/ class="text_card"><p>打赏</p><i style="font-style: normal;">{{bookCopperCoins}}</i></li>
-							  <li style="display: none;" <!--v-on:click="rewardFn"--><span><img src="../img/_thumb_03.png"/ class="text_card"><p>分享</p></li>
+							<li><div class="bdsharebuttonbox"><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间">QQ空间</a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博">新浪微博</a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友">QQ好友</a></div></li>
 						</ul>
 					</div>
 				</div>
@@ -423,10 +423,11 @@
 </div>-->
 
 <myfooter></myfooter>
-<link rel="stylesheet" href="../css/wangEditor.min.css" />
+<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_e5553ebfbe.js"></script>
+<script src="../js/main/catalog_904af0d0df.js"></script>
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{"bdSize":16},"image":{"viewList":["qzone","tsina","weixin","sqq"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","weixin","sqq"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 </body>
 </html>
 
