--- a/view/user_info.html
+++ b/view/user_info.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>轻悦文学网---个人中心</title> 
   <link rel="stylesheet" href="../css/main_ddfaca9e09.css" /> 
-  <link rel="stylesheet" href="../css/user_info_f0627d522f.css" /> 
+  <link rel="stylesheet" href="../css/user_info_162e34bf15.css" /> 
   <link rel="stylesheet" href="../css/headerOrFooter_69d072ec5f.css" />
   <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
   <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
@@ -84,5 +84,6 @@
 <script type="text/javascript" src="../lib/wangEditor.min.js" ></script>
 <link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
-<script src="../js/main/user_info_07f8831fdb.js"></script>
+<script src="http://static.geetest.com/static/tools/gt.js"></script>
+<script src="../js/main/user_info_7b82c4edfc.js"></script>
 </html>
