--- a/css/user_info_162e34bf15.css
+++ b/css/user_info_162e34bf15.css
@@ -213,6 +213,7 @@
 .numberAItwo4{margin:30px 0 20px 52px}
 .numberAItwo4 .verify{color:#fff;display:inline-block;background-color:#3db2d8;text-align:center;width:70px;height:22px;font-size:12px;padding-top:5px;margin-left:20px;border-radius:4px;cursor:pointer}
 .numberAItwo4 .verify:hover{background-color:#00A1D6}
+.numberAItwo4 .verify_no{color:#fff;display:inline-block;background-color:#bcbcc3;text-align:center;width:70px;height:22px;font-size:12px;padding-top:5px;margin-left:20px;border-radius:4px;cursor:pointer}
 .book-navAI .book-navAI_bookid{height:212px;width:128px;margin:10px 20px 0 55px;display:inline-block}
 .book-navAI .book-img{height:174px;width:128px;cursor:pointer;border-radius:6px}
 .book-navAI_bookid .book-name{text-align:center;cursor:pointer;width:128px;height:28px;overflow:hidden;display:inline-block}
