--- a/view/login.html
+++ b/view/login.html
@@ -35,7 +35,7 @@
 				<div id="popup-captcha"></div>
 				<a class="btn btn_submit a" id="btn-login">登入</a>
 				<ul>
-					<li><a :href="path.TemprootPath + '/view/forgetlogin.html'">忘记密码</a></li>
+					<li><a :href="path.TemprootPath + '/view/Password_rec.html'">忘记密码</a></li>
 					<li>|</li>
 					<li><a style="color:#000000" :href="path.TemprootPath + '/view/register.html'">注册新帐号</a></li>
 				</ul>
@@ -50,5 +50,5 @@
 <script type="text/javascript" src="../lib/jquery-ui.min.js" ></script>
 <script type="text/javascript" src="../lib/jquery.validate.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/login_e15a5790b0.js"></script>
+<script src="../js/main/login_0fc7caf9ef.js"></script>
 </html>
