--- a/view/welfare.html
+++ b/view/welfare.html
@@ -20,25 +20,25 @@
 <table class="welfare" id="__01"  border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="../img/welfare/&#x798f;&#x5229;8_01.jpg"  alt="" /></td>
+			<img src="../img/welfare/welfare8_01.jpg"  alt="" /></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="../img/welfare/&#x798f;&#x5229;8_02.jpg"  alt="" /></td>
+			<img src="../img/welfare/welfare8_02.jpg"  alt="" /></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="../img/welfare/&#x798f;&#x5229;8_03.jpg"  alt="" /></td>
+			<img src="../img/welfare/welfare8_03.jpg"  alt="" /></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="../img/welfare/&#x798f;&#x5229;8_04.jpg"  alt="" /></td>
+			<img src="../img/welfare/welfare8_04.jpg"  alt="" /></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="../img/welfare/&#x798f;&#x5229;8_05.jpg"  alt="" /></td>
+			<img src="../img/welfare/welfare8_05.jpg"  alt="" /></td>
 	</tr>
 </table>
 </body>
-<script src="../js/main/welfare_f90e552fd0.js"></script>
+<script src="../js/main/welfare_1354db2ea4.js"></script>
 </html>
