--- a/view/register.html
+++ b/view/register.html
@@ -61,7 +61,13 @@
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
 <script src="../js/main/register_687058b845.js"></script>
 <script>
-
-	
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 </script>
+
 </html>
