--- a/view/class.html
+++ b/view/class.html
@@ -118,5 +118,15 @@
     
   <myfooter></myfooter>
   <script src="../js/main/class_aec92905fc.js"></script>		
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </body>
 </html>
