--- a/view/ranking.html
+++ b/view/ranking.html
@@ -92,5 +92,14 @@
 	<myfooter></myfooter>
 	</body>
 <script src="../js/main/ranking_77f677666a.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 </html>
