--- a/view/read_book.html
+++ b/view/read_book.html
@@ -152,4 +152,14 @@
 
 	</body>
 <script src="../js/main/read_book_285923a650.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </html>
