--- a/view/welfare.html
+++ b/view/welfare.html
@@ -41,4 +41,14 @@
 </table>
 </body>
 <script src="../js/main/welfare_1354db2ea4.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </html>
